Updated RME test site

--- a/test/RME/details.html
+++ b/test/RME/details.html
@@ -94,7 +94,7 @@
         </div>
         <div class="row">
             <div class="span2">
-                <p><strong>Color</strong></p>
+                <p><span class="badge badge-important">!</span> <strong>Color</strong></p>
             </div>
             <div class="span10">
                 <div class="progress">
