--- a/test/RME/index.html
+++ b/test/RME/index.html
@@ -44,45 +44,44 @@
     </div>
 
     <div class="container">
-
+        <div class="row">
+            <div class="span12">
+                <h3>Vehicles</h3>
+            </div>
+        </div>
         <div class="row">
             <div class="span3">
-                <h3>Vehicles</h3>
                 <ul class="nav nav-tabs nav-stacked">
                     <li>
                         <a href="details.html">
-                            <!--<i class="icon-chevron-right"></i>-->
-                            <span class="regnbr"><strong>ABP 324</strong></span>
-                            <p>Fuel tank 50%</p>
-                            <p>Color tank 34% (!)</p>
-                            <p>Speed 45 km/h</p>
+                            <p><span class="regnbr texterror"><strong>ABP 324</strong></span> <span class="badge badge-important pull-right">!</span></p>
+                            <p>Fuel tank <span class="label pull-right">50%</span></p>
+                            <p>Color tank <span class="label label-important pull-right">34%</span></p>
+                            <p>Speed <span class="label pull-right">45 km/h</span></p>
                         </a>
                     </li>
                     <li>
                         <a href="details.html">
-                            <!--<i class="icon-chevron-right"></i>-->
-                            <span class="regnbr"><strong>CGH 584</strong></span>
-                            <p>Fuel tank 78%</p>
-                            <p>Color tank 65%</p>
-                            <p>Speed 52 km/h</p>
+                            <p><span class="regnbr"><strong>CGH 584</strong></span></p>
+                            <p>Fuel tank <span class="label pull-right">78%</span></p>
+                            <p>Color tank <span class="label pull-right">65%</span></p>
+                            <p>Speed <span class="label pull-right">52 km/h</span></p>
                         </a>
                     </li>
                     <li>
                         <a href="details.html">
-                            <!--<i class="icon-chevron-right"></i>-->
-                            <span class="regnbr"><strong>MAC 665</strong></span>
-                            <p>Fuel tank 78%</p>
-                            <p>Color tank 89%</p>
-                            <p>Speed 91 km/h</p>
+                            <p><span class="regnbr"><strong>MAC 665</strong></span></p>
+                            <p>Fuel tank <span class="label pull-right">72%</span></p>
+                            <p>Color tank <span class="label pull-right">89%</span></p>
+                            <p>Speed <span class="label pull-right">91 km/h</span></p>
                         </a>
                     </li>
                     <li>
                         <a href="details.html">
-                            <!--<i class="icon-chevron-right"></i>-->
-                            <span class="regnbr"><strong>PRT 783</strong></span>
-                            <p>Fuel tank 72%</p>
-                            <p>Color tank 63%</p>
-                            <p>Speed 76 km/h</p>
+                            <p><span class="regnbr"><strong>PRT 783</strong></span></p>
+                            <p>Fuel tank <span class="label pull-right">92%</span></p>
+                            <p>Color tank <span class="label pull-right">63%</span></p>
+                            <p>Speed <span class="label pull-right">76 km/h</span></p>
                         </a>
                     </li>
                 </ul>
