--- a/test/RME/details.html
+++ b/test/RME/details.html
@@ -83,6 +83,22 @@
         <hr />
 
         <div class="row">
+            <div class="span12">
+                <h3>Actions</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="span12">
+                <button class="btn btn-primary" type="button">Send message to driver</button>
+                <button class="btn" type="button">Reset counter</button>
+                <button class="btn" type="button">Start tracking</button>
+            </div>
+        </div>
+
+        <hr />
+
+        <div class="row">
             <div class="span9">
                 <div class="row">
                     <div class="span4 truckinformation">
